--- a/examples/maze-example-test00/prj/win/gradle-android/app/build.gradle
+++ b/examples/maze-example-test00/prj/win/gradle-android/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
 
 
 task copyFiles(type: Copy) {
-	from '../../../../_otp/prj/maze-example-test00/resources/resources-x1.0-nc/data'
+	from '../../../../../_otp/prj/maze-example-test00/resources/resources-x1.0-nc/data'
 	into 'src/main/assets/data'
 }
 
