--- a/plugins/csharp/CMakeLists.txt
+++ b/plugins/csharp/CMakeLists.txt
@@ -50,7 +50,8 @@ include("${MAZE_DIR}/third-party/mono.cmake")
 ##########################################    
 target_include_directories(
     ${PROJECT_NAME}
-    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    PUBLIC ${MONO_INCLUDE_DIR})
 
 
 ##########################################
