--- a/plugins/csharp/core-lib/CMakeLists.txt
+++ b/plugins/csharp/core-lib/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 ##########################################
 set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.5")
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "MazePlugins")
+target_compile_options(${PROJECT_NAME} PUBLIC "/unsafe")
 
 
 ##########################################
